--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,13 +5,34 @@
     align-items: center;
     justify-content: space-between;
     padding: 0px 3%;
-    background-color: blueviolet;
+    background-color: navy;
 }
 .container h2{
-    font-weight: 510;
-    color: white;
+    letter-spacing: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 30px;
+  color: #fff;
+  text-transform: uppercase;
 }
 .container button{
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    transition: all ease-in 0.25s;
+}
+/* .container button:active{
+    background-color: white;
+    color: navy;
+} */
+
+.container  .btn{
     padding: 10px 25px;
     background-color: transparent;
     border: 2px solid white;
@@ -22,58 +43,7 @@
     cursor: pointer;
     transition: all ease-in 0.25s;
 }
-.container button:active{
+.container  .btn:active{
     background-color: white;
-    color: blueviolet;
-}
-table{
-    margin: 40px auto;
-    width: 650px;
-    border-collapse: collapse;
-    border-radius: 4px;
-    overflow: hidden;
-}
-table thead{
-    width: 100%;
-    color: white;
-    background-color: blueviolet;
-}
-table th{
-    padding: 10px;
-    font-size: 14px;
-    font-weight: 500;
-}
-table tbody tr{
-    border-bottom: 1px solid blueviolet;
-}
-table tbody tr:hover{
-    background-color:  rgba(137, 43, 226, 0.232);
-}
-table tbody td{
-    font-size: 13px;
-    text-align: center;
-    padding: 6px;
-}
-table tbody .action{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-}
-.action i{
-    font-size: 16px;
-    transition: all ease-in 0.25s;
-    cursor: pointer;
-}
-.action i:first-child{
-    color: green;
-}
-.action i:first-child:active{
-    color: lime;
-}
-.action i:last-child{
-    color: crimson;
-}
-.action i:last-child:active{
-    color: red;
+    color: navy;
 }
